# -cicd-pipeline

./: Dockerfile  README.md  pyproject.toml
.github/: CI_CD.yml  ci.yml
.github/workflows/: CI_CD.yml
src/tests/: test_crypto_api.py
src/webapp/: app.py  constants.py  crypto_api.py
