[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webapp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
